--- a/app/src/main/res/layout/fragment_grocery_list_entry.xml
+++ b/app/src/main/res/layout/fragment_grocery_list_entry.xml
@@ -12,7 +12,7 @@
 
     <TextView
             android:id="@+id/name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="8"
             android:clickable="false"
@@ -21,16 +21,16 @@
 
     <TextView
             android:id="@+id/quantity_with_unit"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:clickable="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="#263238" />
 
     <CheckBox
             android:id="@+id/checked"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layoutDirection="rtl" />
