--- a/app/src/main/res/layout/fragment_grocery_list_entry.xml
+++ b/app/src/main/res/layout/fragment_grocery_list_entry.xml
@@ -10,13 +10,26 @@
         android:orientation="horizontal"
         android:padding="10dp">
 
-    <TextView
-            android:id="@+id/name"
+    <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="8"
-            android:clickable="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+            android:layout_weight="8">
+
+        <TextView
+                android:id="@+id/name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:clickable="false" />
+
+        <com.google.android.material.chip.Chip
+                android:id="@+id/unseen_chip"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="1"
+                android:text="@string/new_chip" />
+    </LinearLayout>
 
     <TextView
             android:id="@+id/quantity_with_unit"
