--- a/app/src/main/res/layout/fragment_grocery_list_entry.xml
+++ b/app/src/main/res/layout/fragment_grocery_list_entry.xml
@@ -19,6 +19,7 @@
                 android:id="@+id/name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:layout_weight="4"
                 android:clickable="false" />
 
@@ -27,7 +28,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:layout_weight="1"
+                android:layout_weight="1.1"
                 android:text="@string/new_chip" />
     </LinearLayout>
 
