--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,14 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal" />
 
+        <com.google.android.material.chip.Chip
+                android:id="@+id/failed_chip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginEnd="5dp"
+                android:visibility="invisible" />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/floating_plus_button"
                 android:layout_width="wrap_content"
